--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "4.18.0",
     "express-handlebars": "6.0.5",
     "mysql": "2.18.1",
+    "qrcode": "1.5.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
